--- a/pages/repair-vagon.html
+++ b/pages/repair-vagon.html
@@ -12,14 +12,11 @@
     <link rel="mask-icon" href="../img/favico/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-</head>
-<link rel="stylesheet" href="../css/main.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link rel="stylesheet" href="../css/bootstrap.min.css">
-<script src="../js/jquery-3.3.1.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<title>Уральская вагоноремонтная компания</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <title>Уральская вагоноремонтная компания</title>
 </head>
 
 <body>
@@ -52,7 +49,13 @@
             </div>
         </nav>
     </div>
-   
+
+
+    
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="js/SmoothScroll.js"></script>
+    <script>SmoothScroll({ keyboardSupport: false })</script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 
 </html>
