--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
-							<img src="img/carousel/first.JPG" alt="АБК">
+							<img src="img/carousel/first.jpg" alt="АБК">
 							<div class="carousel-caption">
 								<h3>Уральская вагоноремонтная компания</h3>
 							</div>
@@ -102,7 +102,7 @@
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img src="img/carousel/sixtn.JPG" alt="Парк">
+							<img src="img/carousel/sixtn.jpg" alt="Парк">
 							<div class="carousel-caption">
 								<h3>Парк пополнения вагонов в ремонт</h3>
 							</div>
@@ -135,7 +135,7 @@
 						<span class="date">26.04.2019</span>
 						<div class="d-flex">
 							<div class="info">
-								<a href="pages/news.html"><img src="img/news-2.JPG" alt="news-img">
+								<a href="pages/news.html"><img src="img/news-2.jpg" alt="news-img">
 							</div>
 							<div class="info">Сегодня на территории «УВК» был проведен субботник. В ходе него была убрана прилегающая территория и обновлена дорожная разметка на парковке.  </a>
 							</div>
