--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<span class="date">01.05.2019</span>
 						<div class="d-flex">
 							<div class="info">
-								<a href="pages/news.html"><img src="img/newsh.jpg" alt="news-img">
+								<a href="pages/news.html"><img src="img/newsh.JPG" alt="news-img">
 							</div>
 							<div class="info">Сегодня сотрудники уральской вагоноремонтной компании поучаствовали в демонстации приуроченной к 1 мая. </a>
 							</div>
@@ -135,7 +135,7 @@
 						<span class="date">26.04.2019</span>
 						<div class="d-flex">
 							<div class="info">
-								<a href="pages/news.html"><img src="img/news-2.jpg" alt="news-img">
+								<a href="pages/news-2.html"><img src="img/news-2.JPG" alt="news-img">
 							</div>
 							<div class="info">Сегодня на территории «УВК» был проведен субботник. В ходе него была убрана прилегающая территория и обновлена дорожная разметка на парковке.  </a>
 							</div>
@@ -145,7 +145,7 @@
 						<span class="date">02.04.2019</span>
 						<div class="d-flex">
 							<div class="info">
-								<a href="pages/news.html"><img src="img/news-3.jpg" alt="news-img">
+								<a href="pages/news-3.html"><img src="img/news-3.jpg" alt="news-img">
 							</div>
 							<div class="info">Сегодня сотрудники Уральской вагоноремонтной компании приняли участие в
 								соревнованиях по стритболу, подъёму гири на время и настольному теннису.</a>
