--- a/pages/news-3.html
+++ b/pages/news-3.html
@@ -56,7 +56,7 @@
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto odio labore modi nisi ullam alias doloribus ratione! Reiciendis voluptas harum sapiente delectus, natus deserunt labore cupiditate. Asperiores nihil magnam earum ratione fugit voluptatibus iste natus impedit odio cum eveniet dolor sed voluptatum quos nesciunt non debitis repellat tempora, labore libero temporibus ut voluptate hic? Rem harum sequi non est unde assumenda voluptas illum odit dolorum voluptatum eligendi nobis aperiam sapiente optio repudiandae, quae recusandae vero inventore nesciunt ut. Quis vel fugit corporis deleniti ab a in, ducimus architecto tempora, non eveniet expedita asperiores numquam? Atque eum assumenda dolorem. Commodi repellendus, modi quidem ab atque quisquam quis, libero hic ea ratione minus corporis voluptatibus maiores eveniet, voluptatem est distinctio itaque voluptate excepturi. Quod placeat saepe alias quidem beatae suscipit consequatur sint cupiditate magnam corrupti similique, eum magni reiciendis ad velit quaerat ex quo itaque! Dolorum nihil, natus in eaque ducimus sunt accusantium distinctio iste consequatur voluptates reiciendis asperiores officiis est soluta harum rerum ut enim numquam, dolor temporibus unde quas quidem vitae esse. Est eligendi sit veritatis nam magnam? Quia, placeat.
     </div>
     <div class="col-sm-6">
-        <img src="../img/news/1.JPG" alt="">
+        <img src="../img/news/3.1.jpg" alt="">
     </div>
 </div>
 </div>
@@ -67,7 +67,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto odio labore
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto odio labore modi nisi ullam alias doloribus ratione! Reiciendis voluptas harum sapiente delectus, natus deserunt labore cupiditate. Asperiores nihil magnam earum ratione fugit voluptatibus iste natus impedit odio cum eveniet dolor sed voluptatum quos nesciunt non debitis repellat tempora, labore libero temporibus ut voluptate hic? Rem harum sequi non est unde assumenda voluptas illum odit dolorum voluptatum eligendi nobis aperiam sapiente optio repudiandae, quae recusandae vero inventore nesciunt ut. Quis vel fugit corporis deleniti ab a in, ducimus architecto tempora, non eveniet expedita asperiores numquam? Atque eum assumenda dolorem. Commodi repellendus, modi quidem ab atque quisquam quis, libero hic ea ratione minus corporis voluptatibus maiores eveniet, voluptatem est distinctio itaque voluptate excepturi. Quod placeat saepe alias quidem beatae suscipit consequatur sint cupiditate magnam corrupti similique, eum magni reiciendis ad velit quaerat ex quo itaque! Dolorum nihil, natus in eaque ducimus sunt accusantium distinctio iste consequatur voluptates reiciendis asperiores officiis est soluta harum rerum ut enim numquam, dolor temporibus unde quas quidem vitae esse. Est eligendi sit veritatis nam magnam? Quia, placeat.
     </div>
     <div class="col-sm-6">
-        <img src="../img/news/2.JPG" alt="">
+        <img src="../img/news/3.2.jpg" alt="">
     </div>
 </div>
 </div>
@@ -78,7 +78,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto odio labore
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto odio labore modi nisi ullam alias doloribus ratione! Reiciendis voluptas harum sapiente delectus, natus deserunt labore cupiditate. Asperiores nihil magnam earum ratione fugit voluptatibus iste natus impedit odio cum eveniet dolor sed voluptatum quos nesciunt non debitis repellat tempora, labore libero temporibus ut voluptate hic? Rem harum sequi non est unde assumenda voluptas illum odit dolorum voluptatum eligendi nobis aperiam sapiente optio repudiandae, quae recusandae vero inventore nesciunt ut. Quis vel fugit corporis deleniti ab a in, ducimus architecto tempora, non eveniet expedita asperiores numquam? Atque eum assumenda dolorem. Commodi repellendus, modi quidem ab atque quisquam quis, libero hic ea ratione minus corporis voluptatibus maiores eveniet, voluptatem est distinctio itaque voluptate excepturi. Quod placeat saepe alias quidem beatae suscipit consequatur sint cupiditate magnam corrupti similique, eum magni reiciendis ad velit quaerat ex quo itaque! Dolorum nihil, natus in eaque ducimus sunt accusantium distinctio iste consequatur voluptates reiciendis asperiores officiis est soluta harum rerum ut enim numquam, dolor temporibus unde quas quidem vitae esse. Est eligendi sit veritatis nam magnam? Quia, placeat.
     </div>
     <div class="col-sm-6">
-        <img src="../img/news/3.JPG" alt="">
+        <img src="../img/news/3.3.jpg" alt="">
     </div>
 </div>
 </div>
