--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
 			$('.grs').tooltip({
 				title: "Гарант рейл сервис",
 				html: true,
+				trigger:"focus",
 				placement: "top"
 			});
 			$('.mmk').tooltip({
